# 3D-Modelisation

OPEN_GL_EXO/programme_1/: CMakeLists.txt  README
OPEN_GL_EXO/programme_1/src/: Makefile  main.cpp  shader.frag  shader.vert
OPEN_GL_EXO/programme_2/src/: main.cpp  shader.frag
OPEN_GL_EXO/programme_3/src/: main.cpp  shader.frag
OPEN_GL_EXO/programme_4/src/: Makefile  main.cpp  shader.vert
OPEN_GL_EXO/programme_5/src/: main.cpp  mat4.cpp  shader.vert
OPEN_GL_EXO/programme_6/src/: Makefile  main.cpp  mat4.hpp  shader.frag  shader.vert
OPEN_GL_EXO/programme_7/src/: Makefile  main.cpp  mat4.cpp  shader.frag  shader.vert
OPEN_GL_EXO/programme_8/src/: main.cpp
OPEN_GL_EXO/programme_9/src/: Makefile  main.cpp
PROJECT_JEU/: DURET-Guillaume_modifie.docx
PROJECT_JEU/programme_10/src/: main.cpp
QT/: README
QT/partie_01/: enonce.txt
QT/partie_01/src/: Makefile
QT/partie_02/: enonce.txt
QT/partie_02/src/: Makefile  main.cpp
QT/partie_03/: CMakeLists.txt  enonce.txt
QT/partie_03/src/: Makefile  myWindow.cpp
QT/partie_04/: CMakeLists.txt  enonce.txt
QT/partie_06/: CMakeLists.txt
QT/partie_07/: CMakeLists.txt  enonce.txt
QT/partie_07/src/: Makefile  glutils.cpp  glutils.hpp  shader.frag  shader.vert
TP_GEOMETRIE_DIFFERENTIELLE_TP3/: participant.txt
TP_GEOMETRIE_DIFFERENTIELLE_TP3/tp_geometrie_differentielle/: CMakeLists.txt
TP_GEOM_MODEL_TP1/geom_model/: CMakeLists.txt  README
TP_PARAMETRIQUE_TP2/tp_parametrique/: control_polygon.txt  control_polygonlong1.txt  control_polygonlong2.txt  control_polygonlong3.txt
(+40 files in other folders)
